--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
+   "homepage": "https://juliyalip.github.io/product-page",
   "dependencies": {
     "acorn": "^8.14.0",
     "ajv": "^6.12.6",
@@ -69,6 +69,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.96.1",
@@ -78,7 +79,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve",
-    "build": "webpack"
+    "build": "webpack --config webpack.config.js",
+  "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
